--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,17 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.3"
-  }
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.18",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
+  },
+  "scripts": {
+    "start-dev": "nodemon index.ts",
+    "build": "tsc --project ./",
+    "start-build": "node ./build"
+}
 }
