--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "@sailplane/logger": "^3.0.0",
     "axios": "^0.26.0",
     "bottlejs": "1.7",
-    "express": "^4.17.3"
+    "date-fns": "^2.28.0",
+    "express": "^4.17.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -20,6 +22,7 @@
   "scripts": {
     "start-dev": "nodemon index.ts",
     "build": "tsc --project ./",
-    "start-build": "node ./build"
+    "start-build": "node ./build",
+    "prestart-build": "yarn build"
   }
 }
